The Progress of today

--- a/index.html
+++ b/index.html
@@ -1,11 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./mybrand.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>My brand</title>
 </head>
+
 <body>
-    
+    <div class="color-1"></div>
+    <div class="container-1">
+        <div class="nav">
+            <img src="./Pictures/Logo.png" alt="myLogo" class="logo-1">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Language</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Sign/Sign up</a></li>
+                    <li><button class="btn-1">Contact me</button></li>
+                </ul>
+
+            </nav>
+        </div>
+        <div class="box-1">
+            <span class="intro-1">Hello, I’m<br>
+                MUNEZERO N.Michel
+                <h4 class="intro-2">Passionate software developer with a flair for creating elegant and efficient
+                    solutions.</h4>
+                <button class="btn-2">Say Hello</button>
+                <span class="boxes-3">
+                    <span class="back-1">
+                        <span class="sub-1">-1 Y.</span>
+                        <span class="sub-2">Experience</span>
+                    </span>
+
+                    <span class="back-2">
+                        <span class="sub-3">0</span>
+                        <span class="sub-4">Project Completed</span>
+                    </span>
+
+                    <span class="back-3">
+                        <span class="sub-5">0</span>
+                        <span class="sub-6">Happy Client</span>
+                    </span>
+                </span>
+            </span>
+
+            <img src="./Pictures/mySelf.png" alt="profile" class="mySelf-1">
+        </div>
+        <div class="box-2">
+            <span class="icons-1">
+
+            </span>
+            <img src="./Pictures/2.png" alt="mySecond-Profile" class="pro-2">
+            <span class="intro-3">
+                <p>I am Professional User Experience Designer</p><br>
+                <span class="sub-box-1">
+                    <p>“I’m a developer with experience in building websites for small and medium sized businesses.<br>
+                        I'm looking for providing good services.</p>
+                </span><br>
+                <span class="sub-btn-2">
+                    <button class="btn-3">My Project</button>
+                    <button class="btn-4">Download CV</button>
+                </span>
+            </span>
+        </div>
+        <div class="box-3">
+            <span class="sub-box-5">
+                <h1 class="lang-1">The language we use:</h1><br>
+                <p class="desc-lang">As a software developer, I am fluent in the languages that power the digital realm.
+                    Whether crafting robust backend solutions with Python and Java, building dynamic frontend interfaces
+                    using React and Angular, or optimizing databases with SQL, I navigate the coding landscape to create
+                    seamless and efficient software experiences.</p>
+            </span>
+            <div class="over-2">
+                <div class="over-1">
+                    <div class="cont-1">
+                        <span class="icon-1">
+                        <i class="fa-brands fa-html5" id="icon-one"></i>
+                    </span>
+                        <h1 class="des-1">HTML</h1>
+                        <p class="des-2">HTML, or HyperText Markup Language, is the backbone of the web and a
+                            fundamental language in a
+                            software developer's toolkit.</p>
+                    </div>
+                    <div class="cont-2">
+                        <span class="icon-2">
+                            <i class="fa-brands fa-css3-alt"></i>
+                        </span>
+                        <h1 class="des-1">CSS 3</h1>
+                        <p class="des-2">CSS3, or Cascading Style Sheets Level 3, empowers software developers to bring
+                            creativity and
+                            style to web development.</p>
+                    </div>
+                </div>
+                <div class="over-1">
+                    <div class="cont-3">
+                        <span class="icon-3">
+                            <i class="fa-brands fa-js"></i>
+                        </span>
+                        <h1 class="des-1">Java Script(JS)</h1>
+                        <p class="des-2">JavaScript, the dynamic scripting language, is a cornerstone for software
+                            developers, enabling interactive and responsive web applications</p>
+                    </div>
+                    <div class="cont-4">
+                        <span class="icon-4">
+                            <i class="fa-brands fa-node-js"></i>
+                        </span>
+                        <h1 class="des-1">Node Js</h1>
+                        <p class="des-2">Node.js, a server-side JavaScript runtime, has become a pivotal tool for software developers in building scalable and high-performance applications</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="box-4">
+            <h1>div</h1>
+        </div>
+        <div class="box-5">
+            <h1>div</h1>
+        </div>
+        <div class="box-6">
+            <h1>div</h1>
+        </div>
+        <div class="box-7">
+            <h1>div</h1>
+        </div>
+        <div class="box-8">
+            <h1>div</h1>
+        </div>
+        <div class="box-9">
+            <h1>div</h1>
+        </div>
+    </div>
+
 </body>
+
 </html>
