--- a/SignUp/Signup.html
+++ b/SignUp/Signup.html
@@ -4,15 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./Pictures/LG-1.png">
     <link rel="stylesheet" href="Signup.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Signup | Page</title>
 </head>
 
 <body>
     <div class="container">
+        <span id="back-1">
+            <a href="../index.html" id="link-1"><i class="fa-solid fa-arrow-left"></i></a>
+        </span>
         <div class="box-1">
             <div class="box1-title">
                 <h1>SignUp</h1>
+                
             </div>
             <form action="">
                 <label for="" id="name-2">Name*</label>
@@ -33,6 +39,7 @@
                     </svg></button>
             </form>
         </div>
+
     </div>
 </body>
 
