--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./Pictures/LG-1.png">
     <link rel="stylesheet" href="./mybrand.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -19,13 +20,13 @@
             <img src="./Pictures/Logo.png" alt="myLogo" class="logo-1">
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Language</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Sign/Sign up</a></li>
-                    <li><button class="btn-1">Contact me</button></li>
+                    <li><a href="#" id="home-1">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#lang">Language</a></li>
+                    <li><a href="#port-2">Portfolio</a></li>
+                    <li><a href="#blog-2">Blog</a></li>
+                    <li><a href="./LogIn/Login.html">Sign/Sign up</a></li>
+                    <li><button class="btn-1"><a href="#contact-2">Contact me</a></button></li>
                     <li><a href="javascript:void(0);" class="nav" onclick="toggleFunction()"></a></li>
                 </ul>
 
@@ -61,7 +62,7 @@
             <img src="./Pictures/mySelf.png" alt="profile" class="mySelf-1">
         </div>
 
-        <div class="box-2">
+        <div class="box-2" id="about">
             <!-- <div class="inside-box-2"> -->
             <span class="icons-1">
                 <img src="./Pictures/2.png" alt="mySecond-Profile" class="pro-2">
@@ -146,7 +147,7 @@
             </span>
             <!-- </div> -->
         </div>
-        <div class="box-3">
+        <div class="box-3" id="lang">
             <span class="sub-box-5">
                 <h1 class="lang-1">The language we use:</h1><br>
                 <p class="desc-lang">As a software developer, I am fluent in the languages that power the digital realm.
@@ -196,7 +197,7 @@
             </div>
 
         </div>
-        <div class="box-4">
+        <div class="box-4" id="port-2">
             <span class="port-1">
                 <h1 class="sub-port-1">Portfolio</h1>
             </span>
@@ -262,7 +263,7 @@
                 <button class="bottom-btn">More Project</button>
             </div>
         </div>
-        <div class="box-5">
+        <div class="box-5" id="blog-2">
             <h1 class="box-5-title">Do you have Project Idia? Let's discuss your project!</h1>
             <p class="box-5-p">If you have the project idea we can help you to analyze and implement it. </p>
             <button class="box-5-btn">Let’s work Together &nbsp; <i class="fa-solid fa-arrow-right"></i></button>
@@ -289,7 +290,8 @@
                         <p class="cont-desc-p">HTML, or HyperText Markup Language, is the backbone of the web and a
                             fundamental
                             language in a software developer's toolkit. </p>
-                        <a href="#" class="a-box6">visit Site &nbsp; <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="./Single-Blog/Blog.html" class="a-box6">visit Site &nbsp; <i
+                                class="fa-solid fa-arrow-right"></i></a>
 
                     </span>
                     <span class="cont-box6-1">
@@ -300,7 +302,8 @@
                         </p>
                         <p class="cont-desc-p">The ability to analyze complex problems and develop effective solutions
                             is fundamental for a software developer</p>
-                        <a href="#" class="a-box6">visit Site &nbsp; <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="./Single-Blog/Blog.html" class="a-box6">visit Site &nbsp; <i
+                                class="fa-solid fa-arrow-right"></i></a>
                     </span>
                     <span class="cont-box6-1">
                         <img src="./Pictures/caspar-camille-rubin-0qvBNep1Y04-unsplash.jpg" alt="img-box6"
@@ -311,7 +314,8 @@
                         </p>
                         <p class="cont-desc-p">For web developers, knowledge of HTML, CSS, and JavaScript is essential.
                             server-side technologies is also valuable.</p>
-                        <a href="#" class="a-box6">visit Site &nbsp; <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="./Single-Blog/Blog.html" class="a-box6">visit Site &nbsp; <i
+                                class="fa-solid fa-arrow-right"></i></a>
                     </span>
                     <span class="cont-box6-1">
                         <img src="./Pictures/claudio-schwarz-fyeOxvYvIyY-unsplash.jpg" alt="img-box6" class="img-box6">
@@ -321,7 +325,8 @@
                         </p>
                         <p class="cont-desc-p">Understanding algorithms and data structures is crucial for writing
                             efficient and scalable code.</p>
-                        <a href="#" class="a-box6">visit Site &nbsp; <i class="fa-solid fa-arrow-right"></i></a>
+                        <a href="./Single-Blog/Blog.html" class="a-box6">visit Site &nbsp; <i
+                                class="fa-solid fa-arrow-right"></i></a>
                     </span>
                 </div>
             </div>
@@ -365,7 +370,7 @@
                 </span>
             </span>
         </div>
-        <div class="box-8">
+        <div class="box-8" id="contact-2">
             <span class="sub-box8">
 
                 <span class="new-sub-box8">
@@ -507,6 +512,9 @@
                 <p class="last-box9">Copyright © 2024 micka.</p>
             </span>
 
+        </div>
+        <div id="scroll-1">
+            <a href="#home-1"><i class="fa-regular fa-circle-up"></i></a>
         </div>
     </div>
 
