Whole project with all pages

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                     <li><a href="#port-2">Portfolio</a></li>
                     <li><a href="#blog-2">Blog</a></li>
                     <li><a href="./LogIn/Login.html">Sign/Sign up</a></li>
-                    <li><button class="btn-1"><a href="#contact-2">Contact me</a></button></li>
+                    <li><a href="./Admin-panel/Admin-Dashboard/Admin-Dashboard/index.html">Admin</a></li>
+                    <li><button class="btn-1"><a href="#contact-2" id="contact-5">Contact me</a></button></li>
                     <li><a href="javascript:void(0);" class="nav" onclick="toggleFunction()"></a></li>
                 </ul>
 
