--- a/Admin-panel/index.html
+++ b/Admin-panel/index.html
@@ -22,10 +22,17 @@
             <div class="search__container">
                 <input class="search__input" type="text" placeholder="Search"><i class="fa-solid fa-magnifying-glass" id="search-btn"></i>
             </div>
+            <i class="fa-solid fa-magnifying-glass" id="search-btn-2"></i>
+            <span id="menu-1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="25" viewBox="0 0 28 25" fill="none">
+                    <path d="M25.7895 20.5882C26.3572 20.5885 26.903 20.8067 27.3138 21.1977C27.7247 21.5886 27.9691 22.1223 27.9964 22.6881C28.0236 23.254 27.8317 23.8086 27.4604 24.2371C27.089 24.6655 26.5667 24.935 26.0017 24.9897L25.7895 25H2.21053C1.64284 24.9997 1.09702 24.7815 0.686167 24.3906C0.275316 23.9996 0.0309296 23.466 0.00364846 22.9001C-0.0236327 22.3343 0.168283 21.7797 0.539627 21.3512C0.910971 20.9227 1.43328 20.6532 1.99832 20.5985L2.21053 20.5882H25.7895ZM25.7895 10.2941C26.3757 10.2941 26.938 10.5265 27.3526 10.9402C27.7671 11.3539 28 11.915 28 12.5C28 13.085 27.7671 13.6461 27.3526 14.0598C26.938 14.4735 26.3757 14.7059 25.7895 14.7059H2.21053C1.62426 14.7059 1.062 14.4735 0.647448 14.0598C0.232894 13.6461 0 13.085 0 12.5C0 11.915 0.232894 11.3539 0.647448 10.9402C1.062 10.5265 1.62426 10.2941 2.21053 10.2941H25.7895ZM25.7895 0C26.3757 0 26.938 0.232405 27.3526 0.646088C27.7671 1.05977 28 1.62085 28 2.20588C28 2.79092 27.7671 3.35199 27.3526 3.76568C26.938 4.17936 26.3757 4.41176 25.7895 4.41176H2.21053C1.62426 4.41176 1.062 4.17936 0.647448 3.76568C0.232894 3.35199 0 2.79092 0 2.20588C0 1.62085 0.232894 1.05977 0.647448 0.646088C1.062 0.232405 1.62426 0 2.21053 0H25.7895Z" fill="black"/>
+                  </svg>
 
+            </span>
             <div id="left-icon">
-                <i class="fa-solid fa-bars" id="menu-1"></i>
-                <svg xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewBox="0 0 32 32" fill="none"
+                <!-- <i class="fa-solid fa-bars" id="menu-1"></i> -->
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="40" viewBox="0 0 32 32" fill="none"
                     id="message-1">
                     <g clip-path="url(#clip0_29_477)">
                         <path
@@ -39,7 +46,7 @@
                     </defs>
                 </svg>
 
-                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 38 38" fill="none"
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="35" viewBox="0 0 38 38" fill="none"
                     id="notify-1">
                     <g clip-path="url(#clip0_29_473)">
                         <path
@@ -56,7 +63,7 @@
                     </defs>
                 </svg>
 
-                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 70 70" fill="none"
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="50" viewBox="0 0 70 70" fill="none"
                     id="user-1">
                     <g clip-path="url(#clip0_29_479)">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -82,7 +89,7 @@
                                     d="M3 13.2373H11V3.23729H3V13.2373ZM3 21.2373H11V15.2373H3V21.2373ZM13 21.2373H21V11.2373H13V21.2373ZM13 3.23729V9.23729H21V3.23729H13Z"
                                     fill="#2F80ED" />
                             </svg><a href="#">Dashboard</a></li>
-                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20"
+                        <!-- <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20"
                                 fill="none">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
                                     d="M12.7071 1.91084C12.5196 1.75461 12.2652 1.66685 12.0001 1.66685C11.7349 1.66685 11.4806 1.75461 11.2931 1.91084L4.29308 7.74417L2.29308 9.41084C2.19757 9.48771 2.12139 9.57966 2.06898 9.68133C2.01657 9.783 1.98898 9.89235 1.98783 10.003C1.98668 10.1137 2.01198 10.2234 2.06226 10.3258C2.11254 10.4282 2.18679 10.5213 2.28069 10.5995C2.37458 10.6777 2.48623 10.7396 2.60913 10.7815C2.73202 10.8234 2.8637 10.8445 2.99648 10.8435C3.12926 10.8426 3.26048 10.8196 3.38249 10.7759C3.50449 10.7322 3.61483 10.6688 3.70708 10.5892L4.00008 10.345V15.8333C4.00008 16.4964 4.31615 17.1323 4.87876 17.6011C5.44137 18.0699 6.20443 18.3333 7.00008 18.3333H17.0001C17.7957 18.3333 18.5588 18.0699 19.1214 17.6011C19.684 17.1323 20.0001 16.4964 20.0001 15.8333V10.345L20.2931 10.5892C20.4817 10.741 20.7343 10.825 20.9965 10.8231C21.2587 10.8212 21.5095 10.7335 21.6949 10.579C21.8803 10.4245 21.9855 10.2155 21.9878 9.997C21.99 9.77851 21.8892 9.568 21.7071 9.41084L12.7071 1.91084Z"
@@ -122,19 +129,19 @@
                                         <rect width="24" height="24" fill="white" />
                                     </clipPath>
                                 </defs>
-                            </svg><a href="#">Updates</a></li>
+                            </svg><a href="#">Updates</a></li> -->
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"
                                 fill="none">
                                 <path
                                     d="M4 24H14V26H4V24ZM4 18H14V20H4V18ZM26 14H6C5.46957 14 4.96086 13.7893 4.58579 13.4142C4.21071 13.0391 4 12.5304 4 12V6C4 5.46957 4.21071 4.96086 4.58579 4.58579C4.96086 4.21071 5.46957 4 6 4H26C26.5304 4 27.0391 4.21071 27.4142 4.58579C27.7893 4.96086 28 5.46957 28 6V12C28 12.5304 27.7893 13.0391 27.4142 13.4142C27.0391 13.7893 26.5304 14 26 14ZM6 6V12H26V6H6ZM26 28H20C19.4696 28 18.9609 27.7893 18.5858 27.4142C18.2107 27.0391 18 26.5304 18 26V20C18 19.4696 18.2107 18.9609 18.5858 18.5858C18.9609 18.2107 19.4696 18 20 18H26C26.5304 18 27.0391 18.2107 27.4142 18.5858C27.7893 18.9609 28 19.4696 28 20V26C28 26.5304 27.7893 27.0391 27.4142 27.4142C27.0391 27.7893 26.5304 28 26 28ZM20 20V26H26V20H20Z"
                                     fill="#8E8E93" />
-                            </svg><a href="#">Blogs</a></li>
+                            </svg><a href="../CRUD2/Crud2.html">Blogs</a></li>
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewBox="0 0 24 29"
                                 fill="none">
                                 <path
                                     d="M4.80001 7.25001H0.936007C0.492007 7.25001 0.0480075 7.71401 0.108008 8.46801L1.98001 22.9535C1.98001 22.9535 4.20001 12.2815 4.63201 9.71501C4.76401 8.94651 5.36401 8.70001 5.80801 8.70001H12C12 8.70001 11.16 5.68401 11.076 5.35051C10.932 4.71251 10.668 4.35001 10.14 4.35001H6.16801C5.73601 4.35001 5.32801 4.68351 5.20801 5.27801C5.10001 5.85801 4.80001 7.25001 4.80001 7.25001ZM10.656 7.25001H5.85601C5.85601 7.25001 6.36001 5.80001 6.90001 5.80001H9.45601C10.032 5.80001 10.656 7.25001 10.656 7.25001ZM3.20401 23.5625C2.83201 24.244 2.29201 24.65 1.69201 24.65H20.568C21.216 24.65 21.672 24.2005 21.804 23.4465C22.332 20.271 23.82 11.2085 23.82 11.2085C23.904 10.4835 23.46 10.15 23.076 10.15H19.2V8.01851C19.2 7.78651 18.888 7.25001 18.408 7.25001H13.896C13.272 7.25001 12.852 8.09101 12.852 8.09101L12 10.15H6.70801C6.32401 10.15 5.95201 10.4255 5.88001 10.875C5.88001 10.875 3.97201 20.59 3.81601 21.5035C3.73201 22.04 3.55201 22.939 3.20401 23.5625ZM18.456 10.15H13.2C13.2 10.15 13.896 8.70001 14.556 8.70001H17.304C18.156 8.70001 18.456 10.15 18.456 10.15Z"
                                     fill="#8E8E93" />
-                            </svg><a href="#">Portfolio</a></li>
+                            </svg><a href="../CRUD2/Crud2.html">Portfolio</a></li>
                         <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="29" viewBox="0 0 24 29"
                                 fill="none">
                                 <path
@@ -246,7 +253,7 @@
                             <h1 class="com-1">Recent Messages</h1>
             
                             <div class="com-2">
-                                <img src="./Pictures/Avatar Image-1.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image-1.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Theresa Webb</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
@@ -257,7 +264,7 @@
                                 </span>
                             </div>
                             <div class="com-2">
-                                <img src="./Pictures/Avatar Image-3.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image-3.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Justine</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
@@ -268,7 +275,7 @@
                                 </span>
                             </div>
                             <div class="com-2">
-                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Obed</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
@@ -279,7 +286,7 @@
                                 </span>
                             </div>
                             <div class="com-2">
-                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Micka</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
@@ -290,7 +297,7 @@
                                 </span>
                             </div>
                             <div class="com-2">
-                                <img src="./Pictures/About Me.png" alt="img-1" class="av-1">
+                                <img src="./Pictures/Avatar Image.png" alt="img-1" class="av-1" width="50" height="50">
                                 <span class="text-1">
                                     <p class="nom-1">Jamarie</p>
                                     <p>Software development is a multifaceted process that involves the conception, design,
