--- a/CRUD/dashboard.html
+++ b/CRUD/dashboard.html
@@ -200,6 +200,8 @@
                     <form method="post">
                         <label for="">Title</label>
                         <input type="text" name="title" placeholder="enter your title" class="form-control">
+                        <label for="">Insert Photo</label>
+                        <input type="file" id="photo">
                         <div class="form-group">
                             <label for="">Description</label>
                             <textarea class="form-control" id="summernote" name="description"></textarea>
