--- a/LogIn/Login.html
+++ b/LogIn/Login.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./Pictures/LG-1.png">
     <link rel="stylesheet" href="Login.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script defer src="./Login.js"></script>
     <title>Login | Page</title>
 </head>
+
 <body>
     <div class="container">
         <span id="back-1">
@@ -18,19 +23,29 @@
                 <h1>Login</h1>
             </div>
             <!-- <div class="form-1"> -->
-                <form action="">
+            <form  id="form" onsubmit="return validateInputs()" action="../Admin-panel/Admin.html">
+                <div class="one">
                     <label for="" id="name-2">Email*</label>
-                    <input type="text" name="nom" id="name-1">
+                    <input type="text" name="nom" id="name_1">
+                    <div class="error"></div>
+                </div>
+                <div class="one">
                     <label for="" id="pass-2">Password*</label>
-                    <input type="password" name="password" id="pass-1">
-                    <a href="../ForgotPassword/index.html" id="form-h">Forgot password?</a>
-                    <button id="btn-1"> Login <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <path d="M12 21V19H19V5H12V3H19C19.55 3 20.021 3.196 20.413 3.588C20.805 3.98 21.0007 4.45067 21 5V19C21 19.55 20.8043 20.021 20.413 20.413C20.0217 20.805 19.5507 21.0007 19 21H12ZM10 17L8.625 15.55L11.175 13H3V11H11.175L8.625 8.45L10 7L15 12L10 17Z" fill="#FFF"/>
-                      </svg></button>
-                </form>
+                    <input type="password" name="password" id="pass_1">
+                    <div class="error"></div>
+                </div>
+                <a href="../ForgotPassword/index.html" id="form-h">Forgot password?</a>
+                <button id="btn-1" onclick="validateInputs()"> Login <svg xmlns="http://www.w3.org/2000/svg" width="24"
+                        height="24" viewBox="0 0 24 24" fill="none">
+                        <path
+                            d="M12 21V19H19V5H12V3H19C19.55 3 20.021 3.196 20.413 3.588C20.805 3.98 21.0007 4.45067 21 5V19C21 19.55 20.8043 20.021 20.413 20.413C20.0217 20.805 19.5507 21.0007 19 21H12ZM10 17L8.625 15.55L11.175 13H3V11H11.175L8.625 8.45L10 7L15 12L10 17Z"
+                            fill="#FFF" />
+                    </svg></button>
+            </form>
             <!-- </div> -->
-            <span ><a href="../SignUp/Signup.html" id="create-1">Create account</a></span>
+            <span><a href="../SignUp/Signup.html" id="create-1">Create account</a></span>
         </div>
     </div>
 </body>
+
 </html>
