--- a/Single-Blog/Blog.html
+++ b/Single-Blog/Blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="./Single.js"></script>
+    <script defer src="./Oneblog.js"></script>
     <link rel="icon" type="image/x-icon" href="./Pictures/LG-1.png">
     <link rel="stylesheet" href="./Single.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
